@@ -1,3 +1,8 @@
+2007-09-06 10:07 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/viewer3d/OEMMViewer.java: Remove all
+	  meshOEMM(OEMM) methods and keep only meshOEMM(Mesh).
+
 2007-09-04 14:21 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/viewer3d/OEMMBehavior.java: Modify ViewHolder inner
